[Gc8EZpDO] Remove more uses of getId